# con-diff

./: .ConDiffGloble.f95.swp  .Makefile.swp  .gitignore  .goutputstream-1BO8NW  Algorithm.f95  BoundaryDefine.f95  BoundaryLoad.f95  CMakeLists.txt  ConDiffGenEquation.f95  ConDiffGenFD.f95  ConDiffGenPos.f95  ConDiffGenRightB.f95  ConDiffGloble.f95  ConDiffGlobleDefine.f95  ConDiffSchemes.f95  ConDiffSchemes1D.f95  ConDiffSchemes1DUS.f95  ConDiffSchemesUS.f95  DiagMatEquationSolve.f95  DiagMatEquationSolve.f95~  FileOperate.f95  Grid.f95  GridDefine.f95  GridInput  GridLoad.f95  Makefile  Matrix.f95  Matrix.f95~  boundaryInput  boundaryInput~  boundarydefine.mod  boundaryload.mod  condiff.conf  condiff_oneDimension.f95  condiffgenfd.mod  condiffgenrightb.mod  condiffgloble.mod  condiffschemes1d.mod  dmesolve.mod  fileoperate.mod  (+8 more)
Boundary/: boundary.txt  boundary.txt~
Grid/: sampleGrid.txt
src/: BoundaryDefine.f95  CMakeLists.txt  ConDiffGenRightB.f95  ConDiffGloble.f95  ConDiffGlobleDefine.f95  ConDiffOutPut.f95  GridDefine.f95  GridLoad.f95
